[metadata]
name = asyncinotify
description = 'A simple optionally-async python inotify library, focused on simplicity of use and operation, and leveraging modern Python features'
version = 4.0.9
readme = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
requires-python = '>= 3.6, < 4'
license = MPL 2.0
license_files = LICENSE
maintainer = Taylor C. Richberger
maintainer_email = tcr@absolute-performance.com
url = https://asyncinotify.readthedocs.io/
keywords =
    async
    inotify

classifiers = 
    Development Status :: 6 - Mature
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Framework :: AsyncIO
